--- a/besu/Dockerfile.source
+++ b/besu/Dockerfile.source
@@ -1,5 +1,5 @@
 # Build Teku in a stock debian container
-FROM openjdk:14-jdk-slim-buster as builder
+FROM openjdk:15-jdk-slim-buster as builder
 
 # This is here to avoid build-time complaints
 ARG DOCKER_TAG
@@ -12,15 +12,22 @@ WORKDIR /usr/src
 RUN bash -c "git clone --recursive https://github.com/hyperledger/besu.git && cd besu && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && ./gradlew installDist"
 
 # Pull all binaries into a second stage deploy debian container
-FROM openjdk:14-slim-buster
+FROM openjdk:15-slim-buster
 
-ARG USER
-ARG UID
+ARG USER=besu
+ARG UID=10001
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
   ca-certificates \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
+
+RUN set -eux; \
+	apt-get update; \
+        apt-get install -y gosu ca-certificates; \
+        rm -rf /var/lib/apt/lists/*; \
+# verify that the binary works
+        gosu nobody true
 
 # See https://stackoverflow.com/a/55757473/12429735RUN
 RUN adduser \
@@ -36,8 +43,6 @@ RUN mkdir -p /var/lib/besu && chown -R ${USER}:${USER} /var/lib/besu && chmod -R
 
 # Copy executable
 COPY --from=builder /usr/src/besu/build/install/besu/. /opt/besu/
+COPY ./docker-entrypoint.sh /usr/local/bin/
 
-# Use an unprivileged user.
-USER ${USER}:${USER}
-
-ENTRYPOINT /opt/besu/bin/besu
+ENTRYPOINT ["docker-entrypoint.sh","/opt/besu/bin/besu"]
