--- a/default.env
+++ b/default.env
@@ -1,16 +1,13 @@
-# Please adjust the below variable to your local user ID if you are on Linux.
-# This is vital for key import to work. You can find your UID with "echo $UID".
-LOCAL_UID=1000
 # Client choice: See https://eth2-docker.net/docs/Usage/ClientSetup for available options
-COMPOSE_FILE=lh-base.yml:geth.yml:lh-grafana.yml
+COMPOSE_FILE=lh-base.yml:geth.yml:lh-grafana.yml:grafana-insecure.yml
 # ETH1 endpoint / chain source. This default uses the eth1 node container.
-# Nimbus requires the URL to be ws:// or wss://
+# Nimbus requires the URL to be ws:// or wss://, e.g. ws://eth1:8546
 # For Teku, Lighthouse and Nimbus, you can specify multiple endpoints separated by commas
 ETH1_NODE=http://eth1:8545
 # ETH1 fallback nodes, currently only for Prysm. Can't be empty.
 ETH1_FALLBACK_NODE1=http://eth1:8545
 ETH1_FALLBACK_NODE2=http://eth1:8545
-# Graffiti to use for validator, in order to receive POAP
+# Graffiti to use for validator
 GRAFFITI=eth2-docker
 # Network to use for eth2. If using main net, set to mainnet.
 NETWORK=prater
@@ -53,7 +50,7 @@ TEKU_PORT=9000
 GRAFANA_PORT=3000
 # Local prysm web UI port. Do not expose to Internet, it is insecure http
 PRYSM_WEB_PORT=7500
-# Reverse proxy web port, 443 and 80 are great defaults
+# Secure web proxy port, 443 and 80 are great defaults
 TRAEFIK_WEB_PORT=443
 TRAEFIK_WEB_HTTP_PORT=80
 # ETH1 RPC port, important when using eth1-shared.yml. Also insecure, do not expose to Internet.
@@ -61,9 +58,6 @@ ETH1_RPC_PORT=8545
 # ETH1 WS port, used with Nimbus. Ditto insecure, do not expose to Internet.
 ETH1_WS_PORT=8546
 
-# Leave this as-is to compile nimbus with support for metrics via grafana. 
-# Change to empty (nothing after first =) to disable that functionality
-NIM_METRICS=NIMFLAGS="-d:insecure"
 # Restart policy: Set to no if you do not want services to automatically restart
 RESTART=unless-stopped
 # If you want debug logs, set this to debug instead of info
@@ -74,62 +68,58 @@ LOG_LEVEL=info
 # Doing so is entirely optional, and arguably advanced
 # use.
 
-LH_SRC_BUILD_TARGET=stable
-LH_DOCKER_TAG=latest
-# Change to Dockerfile.source to build from source
-LH_DOCKERFILE=Dockerfile.binary
-LH_USER=lighthouse
-
-GETH_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-GETH_DOCKER_TAG=stable
-# Change to Dockerfile.source to build from source
-GETH_DOCKERFILE=Dockerfile.binary
-GETH_USER=geth
-
-OE_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-OE_DOCKER_TAG=latest
-# Change to Dockerfile.source to build from source
-OE_DOCKERFILE=Dockerfile.binary
-#Used only for source build; binary build defaults to this
-OE_USER=openethereum
-
-NM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-NM_DOCKER_TAG=latest
-# Change to Dockerfile.source to build from source
-NM_DOCKERFILE=Dockerfile.binary
-NM_USER=nethermind
-
-BESU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-BESU_DOCKER_TAG=latest
-# Change to Dockerfile.source to build from source
-BESU_DOCKERFILE=Dockerfile.binary
-# Used only for source build; binary build defaults to this
-BESU_USER=besu
-
-PRYSM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-PRYSM_DOCKER_TAG=stable
-# Change to Dockerfile.source to build from source
-PRYSM_DOCKERFILE=Dockerfile.binary
-PRYSM_USER=prysm
-
-TEKU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
-TEKU_DOCKER_TAG=latest
-# Change to Dockerfile.source to build from source
-TEKU_DOCKERFILE=Dockerfile.binary
-# Used only for source build; binary build defaults to this
-TEKU_USER=teku
-
+# Nimbus
 NIM_SRC_BUILD_TARGET=stable
 NIM_DOCKER_TAG=amd64-latest
 # Change to Dockerfile.source to build from source
 NIM_DOCKERFILE=Dockerfile.binary
-# Used only for source build; binary build defaults to "user"
-NIM_USER=nimbus
 
+# Teku
+TEKU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+TEKU_DOCKER_TAG=latest
+# Change to Dockerfile.source to build from source
+TEKU_DOCKERFILE=Dockerfile.binary
+
+# Lighthouse
+LH_SRC_BUILD_TARGET=stable
+LH_DOCKER_TAG=latest
+# Change to Dockerfile.source to build from source
+LH_DOCKERFILE=Dockerfile.binary
+
+# Prysm
+PRYSM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+PRYSM_DOCKER_TAG=stable
+# Change to Dockerfile.source to build from source
+PRYSM_DOCKERFILE=Dockerfile.binary
+
+# OpenEthereum
+OE_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+OE_DOCKER_TAG=latest
+# Change to Dockerfile.source to build from source
+OE_DOCKERFILE=Dockerfile.binary
+
+# Go-Ethereum aka Geth
+GETH_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+GETH_DOCKER_TAG=stable
+# Change to Dockerfile.source to build from source
+GETH_DOCKERFILE=Dockerfile.binary
+
+# Nethermind
+NM_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+NM_DOCKER_TAG=latest
+# Change to Dockerfile.source to build from source
+NM_DOCKERFILE=Dockerfile.binary
+
+# Besu
+BESU_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
+BESU_DOCKER_TAG=latest
+# Change to Dockerfile.source to build from source
+BESU_DOCKERFILE=Dockerfile.binary
+
+# eth2.0-deposit-cli
 DEPCLI_SRC_BUILD_TARGET=$(git describe --tags $(git rev-list --tags --max-count=1))
 # Does not (yet?) exist on Docker hub
 DEPCLI_DOCKER_TAG=nonesuch
-DEPCLI_USER=depcli
 DEPCLI_LOCALDIR=./.eth2
 
 # For the Node Dashboard, define a regex of mount points to ignore for the diskspace check.
