--- a/eth2.0-deposit-cli/Dockerfile
+++ b/eth2.0-deposit-cli/Dockerfile
@@ -1,8 +1,16 @@
 from python:buster as builder
 
-ARG USER
-ARG UID
 ARG BUILD_TARGET
+
+RUN mkdir -p /src
+
+WORKDIR /src
+RUN bash -c "git clone https://github.com/ethereum/eth2.0-deposit-cli.git && cd eth2.0-deposit-cli && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET}"
+
+FROM python:3.7-alpine
+
+ARG USER=depcli
+ARG UID=1000
 
 # See https://stackoverflow.com/a/55757473/12429735RUN
 RUN adduser \
@@ -14,25 +22,19 @@ RUN adduser \
     --uid "${UID}" \
     "${USER}"
 
-RUN mkdir -p /var/lib/depcli && chown ${USER}:${USER} /var/lib/depcli
-
-WORKDIR /var/lib/depcli
-USER ${USER}
-RUN bash -c "git clone https://github.com/ethereum/eth2.0-deposit-cli.git && cd eth2.0-deposit-cli && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET}"
-
-FROM python:3.7-alpine
-
 WORKDIR /app
 
-COPY --from=builder /var/lib/depcli/eth2.0-deposit-cli/requirements.txt /var/lib/depcli/eth2.0-deposit-cli/setup.py ./
-COPY --from=builder /var/lib/depcli/eth2.0-deposit-cli/eth2deposit ./eth2deposit
+COPY --from=builder /src/eth2.0-deposit-cli/requirements.txt /src/eth2.0-deposit-cli/setup.py ./
+COPY --from=builder /src/eth2.0-deposit-cli/eth2deposit ./eth2deposit
 
-RUN apk add --update gcc libc-dev linux-headers
+RUN apk add --update gcc libc-dev linux-headers bash su-exec
 
 RUN pip3 install -r requirements.txt
 
 RUN python3 setup.py install
 
-USER ${USER}
+RUN chown -R ${USER}:${USER} /app
 
-ENTRYPOINT [ "python3", "./eth2deposit/deposit.py" ]
+COPY ./docker-entrypoint.sh /usr/local/bin/
+
+ENTRYPOINT [ "docker-entrypoint.sh","python3","./eth2deposit/deposit.py" ]
