--- a/lighthouse/Dockerfile.source
+++ b/lighthouse/Dockerfile.source
@@ -13,8 +13,13 @@ FROM debian:buster-slim
 
 # Unused, this is here to avoid build time complaints
 ARG DOCKER_TAG
-ARG USER
-ARG UID
+
+RUN set -eux; \
+        apt-get update; \
+        apt-get install -y gosu; \
+        rm -rf /var/lib/apt/lists/*; \
+# verify that the binary works
+        gosu nobody true
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
   libssl-dev \
@@ -22,6 +27,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   wget \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
+
+ARG USER=lhbeacon
+ARG UID=10002
 
 # See https://stackoverflow.com/a/55757473/12429735RUN
 RUN adduser \
@@ -34,14 +42,33 @@ RUN adduser \
     "${USER}"
 
 # Create data mount point with permissions
-RUN mkdir -p /var/lib/lighthouse && chown ${USER}:${USER} /var/lib/lighthouse && chmod 700 /var/lib/lighthouse
+RUN mkdir -p /var/lib/lighthouse/beacon && chown ${USER}:${USER} /var/lib/lighthouse/beacon && chmod 700 /var/lib/lighthouse/beacon
+
+ARG USER=lhvalidator
+ARG UID=10000
+
+# See https://stackoverflow.com/a/55757473/12429735RUN
+RUN adduser \
+    --disabled-password \
+    --gecos "" \
+    --home "/nonexistent" \
+    --shell "/sbin/nologin" \
+    --no-create-home \
+    --uid "${UID}" \
+    "${USER}"
+
+# Create data mount point with permissions
+RUN mkdir -p /var/lib/lighthouse/validators && chown ${USER}:${USER} /var/lib/lighthouse/validators && chmod 700 /var/lib/lighthouse/validators
+
 # Copy executable
 COPY --from=builder /usr/local/cargo/bin/lighthouse /usr/local/bin/
-# Script to query whether all validator key passwords are the same
-COPY ./query-lh-validator-passwords.sh /usr/local/bin
-# Use an unprivileged user.
-USER ${USER}:${USER}
+
+# Scripts that handle permissions
+COPY ./validator-import.sh /usr/local/bin/
+COPY ./validator-exit.sh /usr/local/bin/
+COPY ./docker-entrypoint.sh /usr/local/bin/
 
 # For voluntary exit
 ENV KEYSTORE=nonesuch
 
+ENTRYPOINT ["docker-entrypoint.sh","lighthouse"]
