--- a/nethermind/Dockerfile.binary
+++ b/nethermind/Dockerfile.binary
@@ -5,8 +5,8 @@ FROM nethermind/nethermind:${DOCKER_TAG}
 # Unused, this is here to avoid build time complaints
 ARG BUILD_TARGET
 
-ARG USER
-ARG UID
+ARG USER=nethermind
+ARG UID=10001
 
 # See https://stackoverflow.com/a/55757473/12429735RUN
 RUN adduser \
@@ -18,10 +18,16 @@ RUN adduser \
     --uid "${UID}" \
     "${USER}"
 
+RUN set -eux; \
+	apt-get update; \
+	apt-get install -y gosu ca-certificates; \
+	rm -rf /var/lib/apt/lists/*; \
+# verify that the binary works
+	gosu nobody true
+
 RUN chown -R ${USER}:${USER} /nethermind
 RUN mkdir -p /var/lib/nethermind && chown ${USER}:${USER} /var/lib/nethermind
 
-# Use an unprivileged user.
-USER ${USER}:${USER}
+COPY ./docker-entrypoint.sh /usr/local/bin/
 
-ENTRYPOINT dotnet /nethermind/Nethermind.Runner.dll
+ENTRYPOINT ["docker-entrypoint.sh","dotnet","/nethermind/Nethermind.Runner.dll"]
