--- a/nimbus/Dockerfile.binary
+++ b/nimbus/Dockerfile.binary
@@ -5,22 +5,27 @@ FROM statusim/nimbus-eth2:${DOCKER_TAG}
 # Unused, the next three are here to avoid build time complaints
 ARG BUILD_TARGET
 ARG METRICS
-ARG USER
 
-ARG UID
+ARG UID=10002
 
 USER root
 
-RUN usermod -u "${UID}" user
+RUN groupmod -g "${UID}" user && usermod -u "${UID}" -g "${UID}" user
+
+RUN set -eux; \
+        apt-get update; \
+        apt-get install -y gosu ca-certificates bash; \
+        rm -rf /var/lib/apt/lists/*; \
+# verify that the binary works
+        gosu nobody true
 
 # Create data mount point with permissions
 RUN mkdir -p /var/lib/nimbus && chown -R user:user /var/lib/nimbus && chmod 700 /var/lib/nimbus
 
 # Copy beacon_node into $PATH
-
 RUN cp /home/user/nimbus-eth2/build/nimbus_beacon_node /usr/local/bin/nimbus_beacon_node
+# Scripts for privilege change and validator import
+COPY ./docker-entrypoint.sh /usr/local/bin/
+COPY ./validator-import.sh /usr/local/bin/
 
-# Use an unprivileged user.
-USER user
-
-ENTRYPOINT ["nimbus_beacon_node"]
+ENTRYPOINT ["docker-entrypoint.sh","nimbus_beacon_node"]
