--- a/nimbus/Dockerfile.source
+++ b/nimbus/Dockerfile.source
@@ -10,18 +10,26 @@ ARG METRICS
 RUN apt-get update && apt-get install -y build-essential git libpcre3-dev ca-certificates
 
 WORKDIR /usr/src
-RUN bash -c "git clone https://github.com/status-im/nim-beacon-chain && cd nim-beacon-chain && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && make -j$(expr $(nproc) - 1) ${METRICS} nimbus_beacon_node"
+RUN bash -c "git clone https://github.com/status-im/nim-beacon-chain && cd nim-beacon-chain && git config advice.detachedHead false && git fetch --all --tags && git checkout ${BUILD_TARGET} && \
+	make -j$(nproc) LOG_LEVEL="TRACE" NIMFLAGS="-d:chronicles_sinks=textlines -d:chronicles_colors=none" PARTIAL_STATIC_LINKING=1 QUICK_AND_DIRTY_COMPILER=1 nimbus_beacon_node"
 
 # Pull all binaries into a second stage deploy debian container
 FROM debian:buster-slim
 
-ARG USER
-ARG UID
+ARG USER=user
+ARG UID=10002
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-  ca-certificates \
+  ca-certificates bash \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
+
+RUN set -eux; \
+        apt-get update; \
+        apt-get install -y gosu; \
+        rm -rf /var/lib/apt/lists/*; \
+# verify that the binary works
+        gosu nobody true
 
 # See https://stackoverflow.com/a/55757473/12429735RUN
 RUN adduser \
@@ -37,8 +45,8 @@ RUN mkdir -p /var/lib/nimbus && chown ${USER}:${USER} /var/lib/nimbus && chmod 7
 
 # Copy executable
 COPY --from=builder /usr/src/nim-beacon-chain/build/nimbus_beacon_node /usr/local/bin/nimbus_beacon_node
+# Scripts for privilege change and validator import
+COPY ./docker-entrypoint.sh /usr/local/bin/
+COPY ./validator-import.sh /usr/local/bin/
 
-# Use an unprivileged user.
-USER ${USER}:${USER}
-
-ENTRYPOINT ["nimbus_beacon_node"]
+ENTRYPOINT ["docker-entrypoint.sh","nimbus_beacon_node"]
