--- a/openethereum/Dockerfile.binary
+++ b/openethereum/Dockerfile.binary
@@ -2,25 +2,25 @@ ARG DOCKER_TAG
 
 FROM openethereum/openethereum:${DOCKER_TAG}
 
-#Next two are unused but included to avoid warnings
+# Unused but included to avoid warnings
 ARG BUILD_TARGET
-ARG USER
 
-ARG UID
+ARG UID=10001
 
 USER root
 
 RUN echo http://dl-2.alpinelinux.org/alpine/edge/community/ >> /etc/apk/repositories
-RUN apk --no-cache add shadow && usermod -u "${UID}" openethereum
+RUN apk --no-cache add shadow && groupmod -g "${UID}" openethereum && usermod -u "${UID}" -g "${UID}" openethereum
+# So we can switch to non-root user if started as root
+RUN apk add --no-cache su-exec ca-certificates bash
 
-RUN cp /home/openethereum/openethereum /usr/local/bin
+RUN cp /home/openethereum/openethereum /usr/local/bin/
 
 # Create data mount point with permissions
 RUN mkdir -p /var/lib/openethereum && chown openethereum:openethereum /var/lib/openethereum && chmod 700 /var/lib/openethereum
 
-# Use an unprivileged user.
-USER openethereum
+COPY ./docker-entrypoint.sh /usr/local/bin/
 
 WORKDIR /var/lib/openethereum
 
-ENTRYPOINT ["openethereum"]
+ENTRYPOINT ["docker-entrypoint.sh","openethereum"]
