--- a/openethereum/Dockerfile.source
+++ b/openethereum/Dockerfile.source
@@ -27,16 +27,17 @@ FROM alpine:3.13.2
 # show backtraces
 ENV RUST_BACKTRACE 1
 
-ARG USER
-ARG UID
+ARG USER=openethereum
+ARG UID=10001
 
-# curl and jq are installed to help create health and readiness checks on Kubernetes
+# su-exe
 RUN apk update && apk add --no-cache \
   libstdc++ \
   eudev-libs \
   libgcc \
-  curl \
-  jq
+  su-exec \
+  bash \
+  ca-certificates
 
 # See https://stackoverflow.com/a/55757473/12429735RUN
 RUN adduser \
@@ -51,11 +52,9 @@ RUN adduser \
 # Create data mount point with permissions
 RUN mkdir -p /var/lib/openethereum && chown ${USER}:${USER} /var/lib/openethereum && chmod 700 /var/lib/openethereum
 
-# Use an unprivileged user.
-USER ${USER}:${USER}
-
 WORKDIR /var/lib/openethereum
 
-COPY --chown=openethereum:openethereum --from=builder /openethereum/target/x86_64-alpine-linux-musl/release/openethereum /usr/local/bin
+COPY --chown=openethereum:openethereum --from=builder /openethereum/target/x86_64-alpine-linux-musl/release/openethereum /usr/local/bin/
+COPY ./docker-entrypoint.sh /usr/local/bin/
 
-ENTRYPOINT ["openethereum"]
+ENTRYPOINT ["docker-entrypoint.sh","openethereum"]
