--- a/prysm-slasher.yml
+++ b/prysm-slasher.yml
@@ -2,15 +2,12 @@ version: "3.4"
 services:
   slasher:
     restart: "${RESTART}"
-    user: ${LOCAL_UID}:${LOCAL_UID}
     build:
       context: ./prysm
       target: slasher
       dockerfile: ${PRYSM_DOCKERFILE}
       args:
         - BUILD_TARGET=${PRYSM_SRC_BUILD_TARGET}
-        - USER=${PRYSM_USER}
-        - UID=${LOCAL_UID}
         - DOCKER_TAG=${PRYSM_DOCKER_TAG}
     image: prysm-slasher
     expose:
@@ -18,6 +15,7 @@ services:
     volumes:
       - prysmslasher-data:/var/lib/prysm
     entrypoint:
+      - docker-entrypoint.sh
       - slasher
       - --datadir
       - /var/lib/prysm
