--- a/prysm/Dockerfile.binary
+++ b/prysm/Dockerfile.binary
@@ -6,14 +6,21 @@ FROM debian:buster-slim as beacon
 #Included here to avoid build-time complaints
 ARG BUILD_TARGET
 
-ARG USER
-ARG UID
+ARG USER=prysmbeacon
+ARG UID=10002
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-  ca-certificates \
+  ca-certificates curl bash \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
  
+RUN set -eux; \
+        apt-get update; \
+        apt-get install -y gosu; \
+        rm -rf /var/lib/apt/lists/*; \
+# verify that the binary works
+        gosu nobody true
+
 # See https://stackoverflow.com/a/55757473/12429735RUN
 RUN adduser \
     --disabled-password \
@@ -27,31 +34,36 @@ RUN adduser \
 # Create data mount point with permissions
 RUN mkdir -p /var/lib/prysm && chown ${USER}:${USER} /var/lib/prysm && chmod 700 /var/lib/prysm
 
-COPY --from=bnsource /app/cmd/beacon-chain/beacon-chain /usr/local/bin/beacon-chain
+COPY --from=bnsource /app/cmd/beacon-chain/beacon-chain /usr/local/bin/
+COPY ./docker-entrypoint.sh /usr/local/bin/
 
-# Use an unprivileged user.
-USER ${USER}:${USER}
-
-ENTRYPOINT ["beacon-chain"]
+ENTRYPOINT ["docker-entrypoint.sh","beacon-chain"]
 
 FROM prysmaticlabs/prysm-validator:${DOCKER_TAG} as vcsource
 
 FROM beacon as validator
 
-USER root
+ARG USER=prysmvalidator
+ARG UID=10000
 
-COPY --from=vcsource /app/cmd/validator/validator /usr/local/bin/validator
-COPY ./create-prysm-validator-wallet.sh /usr/local/bin
+# See https://stackoverflow.com/a/55757473/12429735RUN
+RUN adduser \
+    --disabled-password \
+    --gecos "" \
+    --home "/nonexistent" \
+    --shell "/bin/false" \
+    --no-create-home \
+    --uid "${UID}" \
+    "${USER}"
 
-# Use an unprivileged user.
-USER ${USER}:${USER}
+# Create data mount point with permissions
+RUN mkdir -p /var/lib/prysm && chown ${USER}:${USER} /var/lib/prysm && chmod 700 /var/lib/prysm
+
+COPY --from=vcsource /app/cmd/validator/validator /usr/local/bin/
+COPY ./validator-import.sh /usr/local/bin/
 
 FROM prysmaticlabs/prysm-slasher:${DOCKER_TAG} as slsource
 
 FROM beacon as slasher
 
-USER root
-COPY --from=slsource /app/cmd/slasher/slasher /usr/local/bin/slasher
-
-# Use an unprivileged user.
-USER ${USER}:${USER}
+COPY --from=slsource /app/cmd/slasher/slasher /usr/local/bin/
