--- a/teku-base.yml
+++ b/teku-base.yml
@@ -2,16 +2,13 @@ version: "3.4"
 services:
   beacon:
     restart: "${RESTART}"
-    user: ${LOCAL_UID}:${LOCAL_UID}
     build:
       context: ./teku
       args:
         - BUILD_TARGET=${TEKU_SRC_BUILD_TARGET}
         - DOCKER_TAG=${TEKU_DOCKER_TAG}
-        - USER=${TEKU_USER}
-        - UID=${LOCAL_UID}
       dockerfile: ${TEKU_DOCKERFILE}
-    image: teku
+    image: teku:local
     volumes:
       - teku-data:/var/lib/teku
     environment:
@@ -20,6 +17,7 @@ services:
       - ${TEKU_PORT}:${TEKU_PORT}/tcp
       - ${TEKU_PORT}:${TEKU_PORT}/udp
     entrypoint:
+      - docker-entrypoint.sh
       - /opt/teku/bin/teku
       - --data-path=/var/lib/teku
       - --log-destination=CONSOLE
@@ -31,60 +29,27 @@ services:
       - --validator-keys=/var/lib/teku/validator-keys:/var/lib/teku/validator-passwords
       - --validators-graffiti=${GRAFFITI}
       - --logging=${LOG_LEVEL}
+      - --rest-api-host-allowlist=*
+      - --rest-api-enabled=true
     command: ${TEKU_RAPID_SYNC}
   validator-import:
     restart: "no"
-    user: ${LOCAL_UID}:${LOCAL_UID}
-    image: teku
-    build:
-      context: ./teku
-      args:
-        - BUILD_TARGET=${TEKU_SRC_BUILD_TARGET}
-        - DOCKER_TAG=${TEKU_DOCKER_TAG}
-        - USER=${TEKU_USER}
-        - UID=${LOCAL_UID}
-      dockerfile: ${TEKU_DOCKERFILE}
+    image: teku:local
     volumes:
       - teku-data:/var/lib/teku
-      - ${DEPCLI_LOCALDIR}/validator_keys:/var/lib/teku/validator_keys
-    entrypoint: copy-teku-validator-keys.sh
-  deposit-cli:
+      - ${DEPCLI_LOCALDIR}/validator_keys:/validator_keys
+    entrypoint: validator-import.sh
+  validator-exit:
     restart: "no"
-    user: ${LOCAL_UID}:${LOCAL_UID}
-    build:
-      context: ./eth2.0-deposit-cli
-      args:
-        - BUILD_TARGET=${DEPCLI_SRC_BUILD_TARGET}
-        - USER=${DEPCLI_USER}
-        - UID=${LOCAL_UID}
-    image: eth2.0-deposit-cli
+    image: teku:local
+    user: teku
     volumes:
-      - ${DEPCLI_LOCALDIR}/validator_keys:/app/validator_keys
+      - teku-data:/var/lib/teku
     entrypoint:
-      - python3
-      - /app/eth2deposit/deposit.py
-      - new-mnemonic
-      - --chain
-      - ${NETWORK}
-  deposit-cli-add-recover:
-    restart: "no"
-    user: ${LOCAL_UID}:${LOCAL_UID}
-    build:
-      context: ./eth2.0-deposit-cli
-      args:
-        - BUILD_TARGET=${DEPCLI_SRC_BUILD_TARGET}
-        - USER=${DEPCLI_USER}
-        - UID=${LOCAL_UID}
-    image: eth2.0-deposit-cli
-    volumes:
-      - ${DEPCLI_LOCALDIR}/validator_keys:/app/validator_keys
-      - ${DEPCLI_LOCALDIR}/seed_check:/app/seed_check
-    entrypoint:
-      - python3
-      - /app/eth2deposit/deposit.py
-      - existing-mnemonic
-      - --chain
-      - ${NETWORK}
+      - /opt/teku/bin/teku 
+      - voluntary-exit
+      - --beacon-node-api-endpoint=http://beacon:5051
+      - --validator-keys=/var/lib/teku/validator-keys:/var/lib/teku/validator-passwords
   eth2:
     image: tianon/true
     restart: "no"
