--- a/teku/Dockerfile.binary
+++ b/teku/Dockerfile.binary
@@ -4,20 +4,24 @@ FROM consensys/teku:${DOCKER_TAG}
 
 #Next two are unused but included to avoid warnings
 ARG BUILD_TARGET
-ARG USER
 
-ARG UID
+ARG UID=10002
 
 USER root
 
-RUN usermod -u "${UID}" teku
+RUN groupmod -g "${UID}" teku && usermod -u "${UID}" -g "${UID}" teku
+
+RUN set -eux; \
+        apt-get update; \
+        apt-get install -y gosu ca-certificates; \
+        rm -rf /var/lib/apt/lists/*; \
+# verify that the binary works
+        gosu nobody true
 
 # Create data mount point with permissions
 RUN mkdir -p /var/lib/teku/validator-keys && mkdir -p /var/lib/teku/validator-passwords && chown -R teku:teku /var/lib/teku && chmod -R 700 /var/lib/teku
 # Script to query and store validator key passwords
-COPY ./copy-teku-validator-keys.sh /usr/local/bin
+COPY ./validator-import.sh /usr/local/bin/
+COPY ./docker-entrypoint.sh /usr/local/bin/
 
-# Use an unprivileged user.
-USER teku
-
-ENTRYPOINT /opt/teku/bin/teku
+ENTRYPOINT ["docker-entrypoint.sh","/opt/teku/bin/teku"]
