Validator only options for LH and Teku

--- a/default.env
+++ b/default.env
@@ -1,5 +1,5 @@
 # Client choice: See https://eth2-docker.net/docs/Usage/ClientSetup for available options
-COMPOSE_FILE=lh-base.yml:geth.yml:lh-grafana.yml:grafana-insecure.yml
+COMPOSE_FILE=teku-base.yml:geth.yml:teku-grafana.yml:grafana-insecure.yml
 # ETH1 endpoint / chain source. This default uses the eth1 node container.
 # Nimbus requires the URL to be ws:// or wss://, e.g. ws://eth1:8546
 # For Teku, Lighthouse and Nimbus, you can specify multiple endpoints separated by commas
@@ -37,6 +37,10 @@ DDNS_PROXY=true
 # Teku rapid sync via initial state. Please create an Infura eth2 project first, then replace the {projectid} and {secret} here
 # and uncomment this line
 #TEKU_RAPID_SYNC=--initial-state https://{projectid}:{secret}@eth2-beacon-${NETWORK}.infura.io/eth/v1/debug/beacon/states/finalized
+
+# Beacon node address. This could be comma-separated for Lighthouse, with Infura as failover,
+# or could just be an eth2 Infura project URL for Teku or Lighthouse "validator only" setups. Not in use for Prysm or Nimbus.
+BN_NODE=http://beacon:5052
 
 # P2P ports you will forward to your staking node. Adjust here if you are
 # going to use something other than defaults.
